# sincpro_framework

./: .pre-commit-config.yaml  .yamllint  CHANGELOG.md  LICENSE  LICENSE.md  Makefile  README.md  nested_warning_example.py  nested_warning_example.yml  pyproject.toml  sincpro_framework_ai_guide.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-drafter.yml  semantic.yml
.github/actions/prepare-env/: action.yml
.github/workflows/: 00-check_code_style.yml  01-add_label_to_pr.yaml  02-check_code.yaml  02-run_test.yml  03-release_draft.yaml  03-release_draft.yml  04-publish_release.yml  04_update_project_version.yml  05-discord_notify.yaml  05-publish_release.yml  main-release-draft.yml  pr-auto-laber.yaml  run_test.yml
docs/: README.md  context_manager.md  json_schema_generation.md  simple_typed_context.md  traceability.md  typed_context.md
docs/architecture/: ARCHITECTURE.md
docs/design/: auto_documentation_design.md  context_manager.md
docs/middleware/: README.md
docs/prd/: PRD_01_typed-dependency-container.md  PRD_02_middleware-system.md  PRD_03_observability-tracing.md  PRD_04_auto-documentation.md
examples/: application_service_middleware_example.py  complete_middleware_example.py  context_manager_demo.py  framework_components.ipynb  framework_documentation.md  middleware_example.py  middleware_examples.ipynb  payment_examples.ipynb  setup_framework.py  simple_typed_context.py  traceability_poc.py  typed_context_demo.py
examples/generated_docs/: README.md  application-services.md  dependencies.md  dtos.md  features.md  index.md  middlewares.md  mkdocs.yml  mkdocs_nav.yml  requirements.txt
examples/generated_docs/ai_context/: 01_framework_context.json  01_payment-system_context.json  01_payment-system_dtos.json  01_payment-system_dtos_details.json  01_payment-system_features.json  01_payment-system_features_details.json  payment-system_schema.json  (+11 more)
sincpro_framework/: __init__.py  bus.py  bus.pyi  context.py  context_manager.py  error_handler.py  exceptions.py  ioc.py  middleware.py  sincpro_abstractions.py  sincpro_abstractions.pyi  sincpro_conf.py  sincpro_logger.py  typed_context.py  use_bus.py  use_bus.pyi
sincpro_framework/auto_docs/: README.md  __init__.py  service.py
sincpro_framework/conf/: sincpro_framework_conf.yml
sincpro_framework/context/: framework_context.py  framework_context.pyi  mixin.py
sincpro_framework/ddd/: __init__.py  value_object.py
sincpro_framework/generate_documentation/: __init__.py  service.py  sincpro_framework_ai_guide.json
sincpro_framework/middleware/: __init__.py  authorization.py  base.py  caching.py  validation.py
sincpro_framework/observability/: __init__.py  correlation.py  mixin.py  tracing.py
tests/: conftest.py  fixtures.py  test_auto_docs.py  test_bus.py  test_context_manager.py  test_middleware.py  test_simple_typed_context.py  test_traceability.py  test_typed_context.py
tests/bus/: test_application_bus.py  test_feature_bus.py  test_framework_bus.py
tests/config/: conftest.py  test_config_obj.py  test_env_variables.py  test_read_config.py
tests/ddd/: conftest.py  test_value_object.py  test_value_object_pydantic.py
tests/error_handler/: test_application_layer.py  test_framework_layer.py  test_use_framework_error_handlers.py
tests/middleware/: __init__.py  test_authorization_middleware.py  test_base_middleware.py  test_caching_middleware.py  test_framework_integration.py  test_validation_middleware.py
tests/typing_and_linter/: test_typing_and_linter.py
tests/use_container/: test_multiple_instances.py  test_use_framework.py
(+60 files in other folders)
