[tool.poetry]
name = "sincpro-framework"
version = "3.0.5"
description = "Sincpro framework to use DDD, Clean architecture, Hexagonal architecture"
authors = ["Gutierrez Andres <andru1236@gmail.com>"]
readme = "README.md"
packages = [{include = "sincpro_framework"}]
license = "MIT"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/sincpro/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.12"
dependency-injector = "^4.48.3"
pydantic = "^2.12.5"
pyyaml = "6.0.1"
sincpro-log = "^1.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.12.0"
pytest = "^9.0.2"
ipython = "^9.9.0"
autoflake = "^2.3.1"
pyright = "^1.1.407"
jupyterlab = "^4.5.1"
mypy = "^1.19.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
pymdown-extensions = "^10.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "missing-docstring",
    "fixme",
    "C0103",
    "C0301",
    "R0903",
    "C0413",
    "W1203",
    "I1101",
    "W1309",
    "R0902",
    "C0415",
]

[tool.black]
line-length = 94